[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ezr"
version = "0.1.0"
description = "Explainable multi-objective optimization"
license = "MIT"
authors = [{name="Tim Menzies", email="timm@ieee.org"}]
requires-python = ">=3.12"
readme = "README.md"
keywords = ["optimization", "explainable-ai", "decision-trees"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/timm/ezr"
Issues = "https://github.com/timm/ezr/issues"

[project.scripts]
ezr = "ezr:_pip_main"

[tool.setuptools]
py-modules = ["ezr"]
